--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
 
 <body>
 <main>
+
 	<img src="img/pins.png" alt="pins">
 		<div class="transbox">
-
 			<div id="pins" class="tac"></div>
 			<div id="description" class="tac"></div>
-	
-
-		
 		</div>
+
 		<div class="flex-container">
 			<p class="caption">Goal: </p><div id="goal"></div>
 		</div>
+
 		<div class="flex-container">
 			<p class="caption">Pledges: </p><div id="pledges"></div>
 		</div>
+
 		<div class="flex-container">
 			<p class="caption">Backers: </p><div id="backers"></div>
 		</div>
+
 		<div class="flex-container">
 			<p class="caption">Time Left: </p><div id="timer"></div>
 		</div>
@@ -34,6 +35,18 @@
 		<div class="flex-container">
 			<a href="https://www.kickstarter.com/projects/483356923/pokemon-poke-puff-enamel-pin-set-vol-2?ref=discovery&term=pins">Link to Kickstarter</a>
 		</div>
+
+		<div class="flex-container">
+			<p class="caption">Pledge Levels: </p>
+			<div id="pledge-container">
+				<div id="pledgeLevelName"></div>
+				<div id="price"></div>
+				<div id="features"></div> 
+				<div id="available"></div>
+			</div>
+
+		</div>
+
 	</main>
 
 
@@ -41,3 +54,5 @@
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
+
+
