Fixed Pledge Levels
Corrected spacing for Pledge Levels

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="flex-container">
 			<p class="caption">Pledge Levels: </p>
-			<div id="pledge-container">
+			<div id="pledge-container" class="tal">
 				<div id="pledgeLevelName"></div>
 				<div id="price"></div>
 				<div id="features"></div> 
